# ocl-pbas

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pbas_impl.sln
pbas_impl/: OCLWork.hpp  PBASImpl.cpp  PBASImpl.h  Utiles.hpp  opencl_kernels.cl
src/: OCLWork.cpp  OCLWork.hpp  PBAS.cpp  PBAS.h  PBAS.hpp  PBASImpl.cpp  PBASImpl.h  PBASImpl.hpp  Utiles.cpp  Utiles.hpp  main.cpp  opencl_kernels.cl
